# yt-comments-extractor

./: .gitignore  README.md  RELEASE_NOTES.md  extractor.py  main.py  pyproject.toml  requirements.txt  spam_filter.py
core/: __init__.py  constants.py  settings.py  validators.py
